- lua scripting is used to save and invalidate cache,
  this means Redis 2.6+ is required, it's also faster
- silent stringify of unknown objects by default
- support caching django.contrib.gis queries (koodjo)
- better invalidation for complex and custom fields.
  It won't always work previously if get_prep_value() is different from stringification.
- fixed working with querysets created by non-patched constructor (#3 and dups)
- fixed invalidate_model() for proxy models
- fixed deepcopy(queryset) bug
- fixed StringifyError on timedelta (mpyatishev)
Backwards incompatible changes:
- filters on TextFields no longer affect invalidation.

1.3.1
- fixed bug with negating "some"-conditions
- fixed bug with schemes unsync when invalidating model
Backwards incompatible changes:
- reverted .cache(write_only=...) behaviour to enable caching for all ops
- .cache(timeout=...) call will enable caching for all ops

1.3.0
- support generic relations (erthalion)
- support filtering by time equality
- optimizations for python 3
Backwards incompatible changes:
- .cache(write_only=...) doesn't enable caching for all ops anymore (not really intended)

1.2.1
- set six minimum version right (crazyzubr)

1.2
- Python 3 support

1.1.1
- fixed Django 1.5- compatibility (aykutozat)

1.1
- Django 1.6+ support
- added Django template tags
- fixed caching querysets combined with | and & operators

1.0.3
- added db_agnostic option to cache profile
- partial support for Django 1.6+

1.0.2
- fixed cached_on_save
- fixed .inplace() altering cache key

1.0.1
- .delete() method for simple cache
- .invalidate() method for @cached() and file_cache.cached() functions

1.0.0
- defend against model changes corrupting cache (ttyS15)
- support F-expressions (Yuego)
- fixed local_get with unhashable arg TypeError
- fixed caching of raw queries (Yuego)

0.9.9
- fixed file cache md5 reference

0.9.8
- support isnull lookup for better invalidation
- fixed 'Query' has no len()